--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,3 +20,25 @@ body {
     background-color: #134347;
 }
 
+#stat-form-container {
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+#stat-results-container > div {
+    margin: 5px;
+    padding: 0;
+}
+.front-form-header-question {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.actives {
+    background-color: rgba(0, 0, 255, 0.31);
+}
+#pagination a{
+    display:inline-block;
+    margin-right:5px;
+}
